src/emhass/static/style.css
/* ... */
button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

fieldset {
  border: 1px solid #7d7d7d;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em;
}

legend {
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

progress {
  display: inline-block;
  vertical-align: baseline;
}

textarea {
  overflow: auto;
}

[type="checkbox"],
[type="radio"] {
  padding: 0;
}

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

[type="search"] {
  -webkit-appearance: textfield;
  appearance: textfield;
  outline-offset: -2px;
}

[type="search"]::-webkit-search-cancel-button,
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

[disabled] {
  cursor: default;
}

::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

details,
menu {
  display: block;
}

summary {
  display: list-item;
}

canvas {
  display: inline-block;
}

template {
  display: none;
}

[hidden] {
  display: none;
}

/* feather icons css 
https://github.com/feathericons/feather */
.feather {
  width: 27px !important;
  height: 27px !important;
  stroke: currentColor !important;
  stroke-width: 2 !important;
  stroke-linecap: round !important;
  stroke-linejoin: round !important;
  fill: none !important;
  filter: drop-shadow(#282928 .2px .2px) !important;
  -webkit-text-size-adjust: none !important;
  -ms-text-size-adjust: none !important;

}

/* feather icons no background color */
#top-links a {
  background: none !important;
}

/* -------------- */

/* EMHASS added style */
/* set rounded element radius */
button,
.main-svg,
.mystyle,
.alert,
.info,
.section-card,
select,
table {
  border-radius: 7px;
  /* overflow: visible; */
}

button,
.alert,
.info,
.section-card,
select {
  text-transform: none;
  border-width: 1px;
  border-style: solid;
  box-shadow: #3d3d3d 3px 3px;
}


.alert,
.info {
  max-width: 50%;
}

.info {
  margin: 0 auto;
  margin-top: 2em;
  padding-top: 1em;
}

h2 {
  margin-bottom: .3em;
  margin-right: .3em;
  margin-left: .3em;
}

.table_div h4 {
  margin-top: .5em;
}

.info p {
  line-height: 2em;
}

table {
  max-width: 50%;
}

button {
  padding: 10px;
  margin: 0px;
}

.table_div {
  /* margin: 15px 5px 0px 0px; */
  margin: 15px 5px 0px 0px;
}

/* center align diagram/table and set overflow scroll*/
.plotly-graph-div,
.table_div {
  overflow-x: auto !important;
  margin: 0 auto;
  margin-bottom: 10px;
  animation-name: fadeInOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-in-out;
  animation-duration: .8s;
}

/* Set min size for diagrams  */
.svg-container,
.table_div div {
  min-width: 850px;
}

/* center align Table*/
.table_div table {
  margin: 0 auto !important;
}

/* Diagram modbar styling */
.modebar-group {
  float: right !important;
  min-width: 0px !important;
}

.modebar-container,
.modebar {
  width: 100% !important;
  position: relative !important;
  float: right !important;
}

/* */

.svg-container,
.main-svg,
.gl-container,
.modebar-container {
  margin: 0 !important;
}

/* Special style for DataFrmae tables */
/* includes alternating gray and white with on-hover color */
.mystyle,
.main-svg {
  font-size: 11pt;
  font-family: Arial, sans-serif;
  border-collapse: separate;
  border-spacing: 0;
  border-style: hidden;
}

.mystyle td,
.mystyle th {
  border-width: 0 1px 1px 0;
}

.mystyle td:first-child,
.mystyle thead th:first-child { border-left-width: 1px; }

.mystyle td {
  padding: 5px;
}

th {
  padding: 5px 7.77px;
  text-align: center;
}

.mystyle tr:nth-child(even) td,
th {
  background: #e1e1e1;
}

.mystyle tr:nth-child(odd) td {
  background: white;
}

.mystyle tr:hover td {
  background-color: silver;
  cursor: pointer;
}

/* Fixed clone rendered by JS for sticky header row */
.sticky-header-wrapper {
  position: fixed;
  top: 0;
  overflow: hidden;
  z-index: 100;
  display: none;
  margin: 0;
  padding: 0;
}

/* Sticky first column */
.mystyle td:first-child,
.mystyle thead th:first-child {
  position: sticky;
  left: 0;
  z-index: 1;
}

/* Opaque background for sticky header row (original table + JS clone) */
.mystyle thead th {
  background: #e1e1e1;
  border-top-width: 1px;
  z-index: 2;
}

th:last-child {
  border-top-right-radius: 7px;
}

th:first-child {
  border-top-left-radius: 7px;
}

tr:last-child td:first-child {
  border-bottom-left-radius: 7px;
}

tr:last-child td:last-child {
  border-bottom-right-radius: 7px;
}

tr:hover td:first-child {
  border-top-left-radius: 7px;
  border-bottom-left-radius: 7px;
}

tr:hover td:last-child {
  border-top-right-radius: 7px;
  border-bottom-right-radius: 7px;
}

#top-links {
  display: flex;
  position: absolute;
  right: 13px;
  top: 13px;
}

/* Post task status styling */
.loading-div {
  display: flex;
  margin: 0 auto;
  align-items: center;
  align-self: center;
  max-width: fit-content;
}

.loading-div h4 {
  margin-right: 13px;
}

/* #loader {
  min-width: 3.5em;
  min-height: 3.5em;
  width: 3.5em;
  height: 3.5em;
} */

.loading {
  /* loading animation  */
  border: 16px solid silver;
  border-radius: 50%;
  border-top: 16px solid #00008b;
  -webkit-animation: spin 2s linear infinite;
  animation: spin 2s linear infinite;
  vertical-align: text-top;
  transition: 1s;
}

@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.tick {
  /* tick symbol  */
  color: #bfebbc;
  vertical-align: text-top;
  font-size: 4.0em;
  animation-name: fadeInOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-in-out;
  animation-duration: .5s;
}
/* ... */

